--- a/webkehitys/tehtava7/bandi.html
+++ b/webkehitys/tehtava7/bandi.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">	
 
-		<title>BellOne - Mainospalvelua</title>
-		<meta name="description" content="The HTML5 Herald">
+		<title>Jari ja taika</title>
+		<meta name="description" content="Jari ja taika">
 		<meta name="author" content="Ville Keituri">
-		<meta name="site" content="BellOne">
+		<meta name="site" content="Jari ja taika">
 		<meta name="keywords" content="jQuery,CSS,HTML,JS,Bootstrap">
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="  sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -22,7 +22,38 @@
 		<script src="js/index.js"></script>	
 	</head>
 	<body>
+		<nav class="navbar navbar-dark navbar-expand-lg bg-light sticky-top" id="navigationbar">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse w-100" id="mainNav">
+				<ul class="navbar-nav w-100 justify-content-center" id="navElements">
+					<li class="nav-item">
+						<a href="#" class="nav-link">Etusivu</a>
+					</li>
+					<li class="nav-item">
+						<a href="bandi.html" class="nav-link">Bändi</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Ohjelmisto</a>
+					</li>
+					<li>
+						<a href=""><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Galleria</a>
+					</li>
+					<li class="nav-item">
+						<a href="historia.html" class="nav-link">Historia</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Yhteystiedot</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 		<div class="container">
+			
 			<div class="row" >
 				<div class="col-12 text-center">
 					<a href="index.html">
@@ -30,22 +61,7 @@
 					</a>
 				</div>
 			</div>
-			<nav id="navigationbar" class="navbar navbar-light navbar-expand-md justify-content-center">
-				<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-					<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<a class="navbar-brand" href="#"></a>
-					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-						<div class="navbar-nav mx-auto">
-							<a class="nav-link active" href="index.html">Etusivu<span class="sr-only">(current)</span></a>
-							<a class="nav-link active" href="bandi.html">Bändi<span class="sr-only">(current)</span></a>
-							<a class="nav-link active" href="#">Keikat<span class="sr-only">(current)</span></a>
-							<a class="nav-link disabled" href="#">Disabled</a>
-						</div>
-					</div>
-				</nav>
-			</nav>
+			
 		</div>
 		<div class="container">
 			<div class="row m-3 mx-auto">
@@ -78,13 +94,16 @@
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-12">
-						<div>
-							<h7 id="footertext">Sivut tehnyt:
+							<a href="https://fi-fi.facebook.com/JariTaika-191704827574713/">
+								<img class="footerimgs" src="img/facebook.png"/>
+							</a>
+							<a href="#">
+								<img class="footerimgs" src="img/twitter.png"/>
+							</a>
 							<a href="https://github.com/VtotheK/">
-								<img style="max-height:30px" src="img/GitHub-Mark-Light-32px.png">
+								<img class="footerimgs" src="img/GitHub-Mark-32px.png">
 							</a>
 							</h7>
-						</div>
 					</div>
 				</div>
 			</div>
