other tabs done  as well

--- a/webkehitys/tehtava7/bandi.html
+++ b/webkehitys/tehtava7/bandi.html
@@ -23,31 +23,30 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-light sticky-top" id="navigationbar">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
+			<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo" id="collapsedlogo"/></a>
+			<button class="navbar-toggler" type="button"  data-toggle="collapse" data-target="#mainNav">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="navbar-collapse collapse w-100" id="mainNav">
 				<ul class="navbar-nav w-100 justify-content-center" id="navElements">
 					<li class="nav-item">
-						<a href="#" class="nav-link">Etusivu</a>
+						<a href="index.html" class="nav-link navbarlabels">Etusivu</a>
 					</li>
 					<li class="nav-item">
-						<a href="bandi.html" class="nav-link">Bändi</a>
+						<a href="bandi.html" class="nav-link navbarlabels">Bändi</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link">Ohjelmisto</a>
+						<a href="ohjelmisto.html" class="nav-link navbarlabels">Ohjelmisto</a>
 					</li>
-					<li>
-						<a href=""><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					<li class="nav-item">
+						<a href="galleria.html" class="nav-link navbarlabels">Galleria</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link">Galleria</a>
+						<a href="historia.html" class="nav-link navbarlabels">Historia</a>
 					</li>
 					<li class="nav-item">
-						<a href="historia.html" class="nav-link">Historia</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" class="nav-link">Yhteystiedot</a>
+						<a href="yhteystiedot.html" class="nav-link navbarlabels">Yhteystiedot</a>
 					</li>
 				</ul>
 			</div>
@@ -57,7 +56,7 @@
 			<div class="row" >
 				<div class="col-12 text-center">
 					<a href="index.html">
-						<img id="headerimg" class="img-fluid" src="img/site-header.png">
+						<img id="headerimg" class="img-fluid" src="img/site-header02.png">
 					</a>
 				</div>
 			</div>
@@ -101,7 +100,7 @@
 								<img class="footerimgs" src="img/twitter.png"/>
 							</a>
 							<a href="https://github.com/VtotheK/">
-								<img class="footerimgs" src="img/GitHub-Mark-32px.png">
+								<img class="footerimgs" src="img/GitHub-Mark-64px.png">
 							</a>
 							</h7>
 					</div>
