--- a/webkehitys/tehtava7/index.html
+++ b/webkehitys/tehtava7/index.html
@@ -32,23 +32,23 @@
 			<div class="navbar-collapse collapse w-100" id="mainNav">
 				<ul class="navbar-nav w-100 justify-content-center" id="navElements">
 					<li class="nav-item">
-						<a href="#" class="nav-link navbarlabels">Etusivu</a>
+						<a href="index.html" class="nav-link navbarlabels">Etusivu</a>
 					</li>
 					<li class="nav-item">
 						<a href="bandi.html" class="nav-link navbarlabels">Bändi</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link navbarlabels">Ohjelmisto</a>
+						<a href="ohjelmisto.html" class="nav-link navbarlabels">Ohjelmisto</a>
 					</li>
 					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
 					<li class="nav-item">
-						<a href="#" class="nav-link navbarlabels">Galleria</a>
+						<a href="galleria.html" class="nav-link navbarlabels">Galleria</a>
 					</li>
 					<li class="nav-item">
 						<a href="historia.html" class="nav-link navbarlabels">Historia</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link navbarlabels">Yhteystiedot</a>
+						<a href="yhteystiedot.html" class="nav-link navbarlabels">Yhteystiedot</a>
 					</li>
 				</ul>
 			</div>
