--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -15,6 +15,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/ohjelmisto.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
@@ -52,7 +53,15 @@
 				</ul>
 			</div>
 		</nav>
-
+		<div class="row col-12 justify-content-center musicchoose">
+            <div style="height:30px; width:160px; margin-top: 10px; text-align: right;">
+                <a class="musicbuttons" onclick="showDanceMusic()">Tanssimusiikkia</a>
+            </div>
+            <div style="font-size:1.8rem">|</div>
+            <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
+                <a class="musicbuttons" onclick="showPopMusic()">Popmusiikkia</a>
+            </div>
+        </div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
