--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -19,9 +19,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
-		<script src="https://sdk.scdn.co/spotify-player.js"></script>
-		<script src="js/index.js"></script>	
-		<script src="js/player.js"></script>
+		<script src="js/ohjelmisto.js" type="text/javascript"></script>		
 	</head>
 	<body>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-light sticky-top" id="navigationbar">
@@ -55,13 +53,23 @@
 		</nav>
 		<div class="row col-12 justify-content-center musicchoose">
             <div style="height:30px; width:160px; margin-top: 10px; text-align: right;">
-                <a class="musicbuttons" onclick="showDanceMusic()">Tanssimusiikkia</a>
-            </div>
+                <a class="musicbuttons" id="showDanceMusicButton">Tanssimusiikkia</a>
+			</div>
             <div style="font-size:1.8rem">|</div>
             <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
-                <a class="musicbuttons" onclick="showPopMusic()">Popmusiikkia</a>
+                <a class="musicbuttons" id="showPopMusicButton">Popmusiikkia</a>
             </div>
-        </div>
+		</div>
+		<div class="row col-12 container showcontainer" id="popmusiccontainer">
+			<table>
+				<td>POP</td>
+			</table>
+			</div>
+			<div class="row col-12 container showcontainer" id="dancemusiccontainer">
+				<table>
+					<td>DANCE</td>
+				</table>
+			</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
