--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -55,21 +55,87 @@
             <div style="height:30px; width:160px; margin-top: 10px; text-align: right;">
                 <a class="musicbuttons" id="showDanceMusicButton">Tanssimusiikkia</a>
 			</div>
-            <div style="font-size:1.8rem">|</div>
+            <div style="font-size:1.8rem">&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp</div>
             <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
                 <a class="musicbuttons" id="showPopMusicButton">Popmusiikkia</a>
+			</div>
+			<div style="font-size:1.8rem">&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp</div>
+            <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
+                <a class="musicbuttons" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
 		</div>
 		<div class="row col-12 container showcontainer" id="popmusiccontainer">
-			<table>
-				<td>POP</td>
+			<table class="showtable">
+				<tr>
+					<th>Firstname</th>
+					<th>Lastname</th>
+					<th>Age</th>
+				  </tr>
+				  <tr>
+					<td>Jill</td>
+					<td>Smith</td>
+					<td>50</td>
+				  </tr>
+				  <tr>
+					<td>Eve</td>
+					<td>Jackson</td>
+					<td>94</td>
+				  </tr>
+				  <tr>
+					<td>John</td>
+					<td>Doe</td>
+					<td>80</td>
+				  </tr>
 			</table>
-			</div>
+		</div>
 			<div class="row col-12 container showcontainer" id="dancemusiccontainer">
-				<table>
-					<td>DANCE</td>
+				<table class="showtable">
+					<tr>
+						<th>Firstname</th>
+						<th>Lastname</th>
+						<th>Age</th>
+					  </tr>
+					  <tr>
+						<td>Jill</td>
+						<td>Smith</td>
+						<td>50</td>
+					  </tr>
+					  <tr>
+						<td>Eve</td>
+						<td>Jackson</td>
+						<td>94</td>
+					  </tr>
+					  <tr>
+						<td>John</td>
+						<td>Doe</td>
+						<td>80</td>
+					  </tr>
 				</table>
-			</div>
+		</div>
+		<div class="row col-12 container showcontainer" id="backgroundmusiccontainer">
+				<table class="showtable">
+					<tr>
+						<th>Firstname</th>
+						<th>Lastname</th>
+						<th>Age</th>
+					  </tr>
+					  <tr>
+						<td>Jill</td>
+						<td>Smith</td>
+						<td>50</td>
+					  </tr>
+					  <tr>
+						<td>Eve</td>
+						<td>Jackson</td>
+						<td>94</td>
+					  </tr>
+					  <tr>
+						<td>John</td>
+						<td>Doe</td>
+						<td>80</td>
+					  </tr>
+				</table>
+		</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
