--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -52,15 +52,19 @@
 			</div>
 		</nav>
 		<div class="row col-12 justify-content-center musicchoose">
-            <div style="height:30px; width:160px; margin-top: 10px; text-align: right;">
+            <div style="height:30px;  margin-top: 10px; text-align: right;">
                 <a class="musicbuttons" id="showDanceMusicButton">Tanssimusiikkia</a>
 			</div>
-            <div style="font-size:1.8rem">&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp</div>
-            <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
+			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
+            <div style="font-size:1.8rem">|</div>
+			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
+			<div style="height: 30px; margin-top:10px; text-align: center;">
                 <a class="musicbuttons" id="showPopMusicButton">Popmusiikkia</a>
 			</div>
-			<div style="font-size:1.8rem">&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp</div>
-            <div style="height: 30px; width:150px; margin-top:10px; text-align: left;">
+			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
+			<div style="font-size:1.8rem">|</div>
+			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
+            <div style="height: 30px; margin-top:10px; text-align: left;">
                 <a class="musicbuttons" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
 		</div>
