--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -19,6 +19,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
+		<script src="js/dancesets.js" type="text/javascript"></script>		
+		<script src="js/backgroundsets.js" type="text/javascript"></script>		
+		<script src="js/popsets.js" type="text/javascript"></script>			
 		<script src="js/ohjelmisto.js" type="text/javascript"></script>		
 	</head>
 	<body>
@@ -68,29 +71,30 @@
                 <a class="musicbuttons" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
 		</div>
-		<div class="row col-12 container showcontainer" id="popmusiccontainer">
-			<table class="showtable">
+		<!-- <div class="row col-12 showcontainer" id="popmusiccontainer">
+			<table class="showtable col-md-4 col-sm-12 col-lg-5 col-xl-4">
+				<col style="width: 5%;">
+				<col style="width: 95%;">
+				<tr >
+					<th colspan="2" class="tabledesc">Setti 1</th>
+				</tr>
 				<tr>
-					<th>Firstname</th>
-					<th>Lastname</th>
-					<th>Age</th>
+					<th></th>
+					<th>Kappale</th>
 				  </tr>
 				  <tr>
-					<td>Jill</td>
-					<td>Smith</td>
-					<td>50</td>
+					<td>1</td>
+					<td>Åsele valssi / Metsäkukkia</td>
 				  </tr>
 				  <tr>
-					<td>Eve</td>
+					<td>2</td>
 					<td>Jackson</td>
-					<td>94</td>
 				  </tr>
 				  <tr>
-					<td>John</td>
+					<td>3</td>
 					<td>Doe</td>
-					<td>80</td>
 				  </tr>
-			</table>
+			</table> -->
 		</div>
 			<div class="row col-12 container showcontainer" id="dancemusiccontainer">
 				<table class="showtable">
@@ -118,6 +122,7 @@
 		</div>
 		<div class="row col-12 container showcontainer" id="backgroundmusiccontainer">
 				<table class="showtable">
+					
 					<tr>
 						<th>Firstname</th>
 						<th>Lastname</th>
