tables and buttons work now

--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -55,95 +55,21 @@
 			</div>
 		</nav>
 		<div class="row col-12 justify-content-center musicchoose">
-            <div style="height:30px;  margin-top: 10px; text-align: right;">
-                <a class="musicbuttons" id="showDanceMusicButton">Tanssimusiikkia</a>
+            <div style="height:30px; width:120px; margin-top: 10px; text-align: right;">
+                <a class="musicbuttons" onclick="showset('dancemusic')" id="showDanceMusicButton">Tanssimusiikkia</a>
 			</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
             <div style="font-size:1.8rem">|</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
-			<div style="height: 30px; margin-top:10px; text-align: center;">
-                <a class="musicbuttons" id="showPopMusicButton">Popmusiikkia</a>
+			<div style="height: 30px; width:120px; margin-top:10px; text-align: center;">
+                <a class="musicbuttons" onclick="showset('popmusic')" id="showPopMusicButton">Popmusiikkia</a>
 			</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
 			<div style="font-size:1.8rem">|</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
-            <div style="height: 30px; margin-top:10px; text-align: left;">
-                <a class="musicbuttons" id="showBackgroundMusicButton">Taustamusiikkia</a>
+            <div style="height: 30px; width:120px; margin-top:10px; text-align: left;">
+                <a class="musicbuttons" onclick="showset('backgroundmusic')" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
-		</div>
-		<!-- <div class="row col-12 showcontainer" id="popmusiccontainer">
-			<table class="showtable col-md-4 col-sm-12 col-lg-5 col-xl-4">
-				<col style="width: 5%;">
-				<col style="width: 95%;">
-				<tr >
-					<th colspan="2" class="tabledesc">Setti 1</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Kappale</th>
-				  </tr>
-				  <tr>
-					<td>1</td>
-					<td>Åsele valssi / Metsäkukkia</td>
-				  </tr>
-				  <tr>
-					<td>2</td>
-					<td>Jackson</td>
-				  </tr>
-				  <tr>
-					<td>3</td>
-					<td>Doe</td>
-				  </tr>
-			</table> -->
-		</div>
-			<div class="row col-12 container showcontainer" id="dancemusiccontainer">
-				<table class="showtable">
-					<tr>
-						<th>Firstname</th>
-						<th>Lastname</th>
-						<th>Age</th>
-					  </tr>
-					  <tr>
-						<td>Jill</td>
-						<td>Smith</td>
-						<td>50</td>
-					  </tr>
-					  <tr>
-						<td>Eve</td>
-						<td>Jackson</td>
-						<td>94</td>
-					  </tr>
-					  <tr>
-						<td>John</td>
-						<td>Doe</td>
-						<td>80</td>
-					  </tr>
-				</table>
-		</div>
-		<div class="row col-12 container showcontainer" id="backgroundmusiccontainer">
-				<table class="showtable">
-					
-					<tr>
-						<th>Firstname</th>
-						<th>Lastname</th>
-						<th>Age</th>
-					  </tr>
-					  <tr>
-						<td>Jill</td>
-						<td>Smith</td>
-						<td>50</td>
-					  </tr>
-					  <tr>
-						<td>Eve</td>
-						<td>Jackson</td>
-						<td>94</td>
-					  </tr>
-					  <tr>
-						<td>John</td>
-						<td>Doe</td>
-						<td>80</td>
-					  </tr>
-				</table>
 		</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
