--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -55,19 +55,19 @@
 			</div>
 		</nav>
 		<div class="row col-12 justify-content-center musicchoose">
-            <div style="height:30px; width:120px; margin-top: 10px; text-align: right;">
+            <div style="height:30px; width:130px; margin-top: 10px; text-align: left;" class="buttoncontainers">
                 <a class="musicbuttons" onclick="showset('dancemusic')" id="showDanceMusicButton">Tanssimusiikkia</a>
 			</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
             <div style="font-size:1.8rem">|</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
-			<div style="height: 30px; width:120px; margin-top:10px; text-align: center;">
+			<div style="height: 30px; width:120px; margin-top:10px; text-align: center;"class="buttoncontainers">
                 <a class="musicbuttons" onclick="showset('popmusic')" id="showPopMusicButton">Popmusiikkia</a>
 			</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
 			<div style="font-size:1.8rem">|</div>
 			<div class="spaces" style="font-size:1.8rem;">&nbsp&nbsp&nbsp</div>
-            <div style="height: 30px; width:120px; margin-top:10px; text-align: left;">
+            <div style="height: 30px; width:130px; margin-top:10px; text-align: left;"class="buttoncontainers">
                 <a class="musicbuttons" onclick="showset('backgroundmusic')" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
 		</div>
