--- a/webkehitys/tehtava7/yhteystiedot.html
+++ b/webkehitys/tehtava7/yhteystiedot.html
@@ -15,6 +15,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/yhteystiedot.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
@@ -51,7 +52,43 @@
 				</ul>
 			</div>
 		</nav>
+		<div class="container">
 
+			<div class="row">
+				<div class="col-12">
+					<form name="contactForm" id="contactFormId">
+						<div class="form-group contentdiv" id="formcontent">
+							<h3 style="text-align: center">Ota yhteyttä</h3>
+								<div class="row">
+									<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 col-xl-6">
+										<label class="contactFormLabels" for="contactFormName">Nimi</label>
+										<input type="text" name="name" type="text" class="form-control" required="true" id="contactFormName" placeholder="Nimesi">
+									</div>
+									<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 col-xl-6">
+										<label class="contactFormLabels" for="contactFormEmail">Sähköposti</label>
+										<input type="email" name="email" class="form-control" required="true" id="contactFormEmail" placeholder="Sähköpostiosoite">
+									</div>
+									<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-xl-12" style="text-align: center;">
+										<input class="partybuttons" type="radio" name="partytype"><span>Häät</span></input>
+										<input class="partybuttons" type="radio" name="partytype"><span>Rippijuhla</span></input>
+										<input class="partybuttons" type="radio" name="partytype"><span>Syntymäpäivä</span></input>
+										<input class="partybuttons" type="radio" name="partytype"><span>Luokkakokous</span></input>
+										<input class="partybuttons" type="radio" name="partytype"><span>Pikkujoulu</span></input>
+										<input class="partybuttons" type="radio" name="partytype"><span>Muu juhla</span></input>
+									</div>
+									<div class="col-12">
+										<h5 style="text-align: center; margin-top: 0.5rem; ">Viesti</h5>
+										<textarea name="message" minlength="5" style="resize: none; width: 100%; height:7rem; border-radius: 5px;" required="true" placeholder="Viesti" id="contactFormMessage"></textarea>
+									</div>
+									<div class="col-12 mt-2">
+										<input type="submit" style="font-size: 24px; background-color: white; border-radius:4px;" value="Lähetä"></input>
+									</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
