navbar works, y-scroll some shitty thing applied so the page wont resize itself

--- a/webkehitys/tehtava7/bandi.html
+++ b/webkehitys/tehtava7/bandi.html
@@ -37,7 +37,7 @@
 					<li class="nav-item">
 						<a href="ohjelmisto.html" class="nav-link navbarlabels">Ohjelmisto</a>
 					</li>
-					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogouncollapsed"/></a>
 					<li class="nav-item">
 						<a href="galleria.html" class="nav-link navbarlabels">Galleria</a>
 					</li>
