--- a/webkehitys/tehtava7/index.html
+++ b/webkehitys/tehtava7/index.html
@@ -39,7 +39,7 @@
 					<li class="nav-item">
 						<a href="ohjelmisto.html" class="nav-link navbarlabels">Ohjelmisto</a>
 					</li>
-					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogouncollapsed"/></a>
 					<li class="nav-item">
 						<a href="galleria.html" class="nav-link navbarlabels">Galleria</a>
 					</li>
@@ -60,7 +60,6 @@
 					</a>
 				</div>
 			</div>
-			
 		</div>
 		<div class="container">
 			<div class="row m-3 mx-auto">
@@ -74,8 +73,6 @@
 			<div class="row m3 mx-auto">
 				<div class="col-md-4 col-sm-12 col-lg-5 col-xl-4 contentdiv spotifycontainer">
 					<iframe class="spotifyplayer" src="https://open.spotify.com/embed/track/0e7ipj03S05BNilyu5bRzt" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-				</div>
-				<div class="col-md-1 col-sm-0 col-lg-1 col-xl-1">
 				</div>
 				<div class="col-md-7 col-sm-12 col-lg-6 col-xl-7 contentdiv">
 					<h4 class="contentdivheader">Tilaa meidät soittamaan juhliisi!</h4>
@@ -93,7 +90,6 @@ Keikkailemme pääasiassa Turku-Tampere-Helsinki -akselilla, mutta kannattaa kys
 				</div>
 			</div>
 		</div>
-
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
