--- a/webkehitys/tehtava7/ohjelmisto.html
+++ b/webkehitys/tehtava7/ohjelmisto.html
@@ -41,7 +41,7 @@
 					<li class="nav-item">
 						<a href="ohjelmisto.html" class="nav-link navbarlabels">Ohjelmisto</a>
 					</li>
-					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="navbandlogouncollapsed"/></a>
 					<li class="nav-item">
 						<a href="galleria.html" class="nav-link navbarlabels">Galleria</a>
 					</li>
@@ -54,6 +54,7 @@
 				</ul>
 			</div>
 		</nav>
+		<div class="container">
 		<div class="row col-12 justify-content-center musicchoose">
             <div style="height:30px; width:130px; margin-top: 10px; text-align: left;" class="buttoncontainers">
                 <a class="musicbuttons" onclick="showset('dancemusic')" id="showDanceMusicButton">Tanssimusiikkia</a>
@@ -71,6 +72,7 @@
                 <a class="musicbuttons" onclick="showset('backgroundmusic')" id="showBackgroundMusicButton">Taustamusiikkia</a>
             </div>
 		</div>
+	</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
@@ -85,7 +87,6 @@
 							<img class="footerimgs" src="img/GitHub-Mark-64px.png">
 						</a>
 						</h7>
-						
 					</div>
 				</div>
 			</div>
