--- a/webkehitys/tehtava7/yhteystiedot.html
+++ b/webkehitys/tehtava7/yhteystiedot.html
@@ -53,7 +53,6 @@
 			</div>
 		</nav>
 		<div class="container">
-
 			<div class="row">
 				<div class="col-12">
 					<form name="contactForm" id="contactFormId">
@@ -76,12 +75,13 @@
 										<input type="email" name="email" class="form-control" required="true" id="contactFormEmail" placeholder="Sähköpostiosoite">
 									</div>
 									<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-xl-12" style="text-align: center;">
-										<input class="partybuttons" type="radio" name="partytype"><span>Häät</span></input>
-										<input class="partybuttons" type="radio" name="partytype"><span>Rippijuhla</span></input>
-										<input class="partybuttons" type="radio" name="partytype"><span>Syntymäpäivä</span></input>
-										<input class="partybuttons" type="radio" name="partytype"><span>Luokkakokous</span></input>
-										<input class="partybuttons" type="radio" name="partytype"><span>Pikkujoulu</span></input>
-										<input class="partybuttons" type="radio" name="partytype"><span>Muu juhla</span></input>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Ravintola/terassi</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Kesäjuhla</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Syntymäpäivä</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Luokkakokous</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Häät</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span>Pikkujoulu</span></input></label>
+										<label><input class="partybuttons" type="radio" name="partytype"><span></span>Muu juhla</span></input></label>
 									</div>
 									<div class="col-12">
 										<h5 style="text-align: center; margin-top: 0.5rem; ">Viesti</h5>
